// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with current user renders correctly 1`] = `
<header
  className="MuiPaper-root-9 MuiPaper-elevation0-11 MuiAppBar-root-1 MuiAppBar-positionStatic-5"
>
  <div
    className="MuiToolbar-root-36 MuiToolbar-gutters-37"
  >
    <div
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <div
        style={
          Object {
            "color": "black",
            "textDecoration": "none",
          }
        }
        to="/"
      >
        <img
          alt="logo"
          src="/images/logo-small.jpg"
          style={
            Object {
              "display": "inline-block",
              "marginRight": 10,
              "verticalAlign": "middle",
            }
          }
        />
        <h1
          className="MuiTypography-root-38 MuiTypography-display2-41 MuiTypography-colorInherit-57"
          style={
            Object {
              "display": "inline-block",
              "verticalAlign": "middle",
            }
          }
        >
          Materia
          <span
            style={
              Object {
                "fontWeight": 300,
              }
            }
          >
            Mundi
          </span>
        </h1>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "color": "black",
            "textDecoration": "none",
          }
        }
        to="/profile"
      >
        <h3
          className="MuiTypography-root-38 MuiTypography-subheading-45 MuiTypography-colorInherit-57"
          style={
            Object {
              "display": "inline-block",
              "marginRight": 10,
            }
          }
        >
          Foo
           
          Bar
        </h3>
      </div>
      <div
        currentUser={
          Object {
            "firstName": "Foo",
            "lastName": "Bar",
          }
        }
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": "testKey",
                "pathname": "/",
                "search": "",
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "testKey",
              "pathname": "/",
              "search": "",
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/",
            "url": "/",
          }
        }
        staticContext={undefined}
      >
        SignOut
      </div>
    </div>
  </div>
</header>
`;

exports[`without current user renders correctly 1`] = `
<header
  className="MuiPaper-root-9 MuiPaper-elevation0-11 MuiAppBar-root-1 MuiAppBar-positionStatic-5"
>
  <div
    className="MuiToolbar-root-36 MuiToolbar-gutters-37"
  >
    <div
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <div
        style={
          Object {
            "color": "black",
            "textDecoration": "none",
          }
        }
        to="/"
      >
        <img
          alt="logo"
          src="/images/logo-small.jpg"
          style={
            Object {
              "display": "inline-block",
              "marginRight": 10,
              "verticalAlign": "middle",
            }
          }
        />
        <h1
          className="MuiTypography-root-38 MuiTypography-display2-41 MuiTypography-colorInherit-57"
          style={
            Object {
              "display": "inline-block",
              "verticalAlign": "middle",
            }
          }
        >
          Materia
          <span
            style={
              Object {
                "fontWeight": 300,
              }
            }
          >
            Mundi
          </span>
        </h1>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "color": "black",
            "textDecoration": "none",
          }
        }
        to="/profile"
      >
        <h3
          className="MuiTypography-root-38 MuiTypography-subheading-45 MuiTypography-colorInherit-57"
          style={
            Object {
              "display": "inline-block",
              "marginRight": 10,
            }
          }
        >
           
        </h3>
      </div>
      <div
        currentUser={Object {}}
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": "testKey",
                "pathname": "/",
                "search": "",
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "testKey",
              "pathname": "/",
              "search": "",
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/",
            "url": "/",
          }
        }
        staticContext={undefined}
      >
        SignOut
      </div>
    </div>
  </div>
</header>
`;
